--- a/index.html
+++ b/index.html
@@ -29,9 +29,80 @@
         <main class="main">
             <section class="section1">
                 <p class="section1__text">CODEPRIDE</p>
-                <h2 class="section1__title">The fastest way to hire great-fit remote developers for your business</h2>
+                <h2 class="section1__title">The fastest way to hire <span class="section1__title-text"> great-fit remote developers</span> for your business</h2>
                 <p class="section1__sub-title">Build your team with handpicked developers from CODEPRIDE, from €31,90 /hour</p>
                 <button class="btn section1__btn">find a developer</button>
+                <div class="section1-container">
+                    <div class="section1-box">
+                        <img src="./img/image 3.png" alt="person" class="section1-box__img">
+                        <div class="section1-box__contant">
+                            <h3 class="section1-box__contant-title">Andrews P</h3>
+                            <p class="section1-box__contant-text">Ruby on Rails Developer</p>
+                            <div class="section1-box__contant-wrapper">
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Ruby</p>
+                                </div>
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Rubi on Rails</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section1-box">
+                        <img src="./img/image 2.png" alt="person" class="section1-box__img min--width">
+                        <div class="section1-box__contant">
+                            <h3 class="section1-box__contant-title">Floyd Miles</h3>
+                            <p class="section1-box__contant-text">Frontend Developer</p>
+                            <div class="section1-box__contant-wrapper">
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">React.js</p>
+                                </div>
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Angular</p>
+                                </div>
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">JavaScript</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section1-box">
+                        <img src="./img/image 4.png" alt="person" class="section1-box__img">
+                        <div class="section1-box__contant">
+                            <h3 class="section1-box__contant-title">Bessie Cooper</h3>
+                            <p class="section1-box__contant-text">PHP Developer</p>
+                            <div class="section1-box__contant-wrapper">
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">PHP</p>
+                                </div>
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Symfony</p>
+                                </div>
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Vue.js</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section1-box">
+                        <img src="./img/image 5.png" alt="person" class="section1-box__img">
+                        <div class="section1-box__contant">
+                            <h3 class="section1-box__contant-title">Andrews P</h3>
+                            <p class="section1-box__contant-text">Ruby on Rails Developer</p>
+                            <div class="section1-box__contant-wrapper">
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Ruby</p>
+                                </div>
+                                <div class="section1-box__contant-contain">
+                                    <p class="section1-box__contant-contain-text">Rubi on Rails</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="section2"></section>
             <section class="section3"></section>
