--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main class="main">
             <section class="section1">
                 <p class="section1__text">CODEPRIDE</p>
-                <h2 class="section1__title">The fastest way to hire <span class="section1__title-text"> great-fit remote developers</span> for your business</h2>
+                <h2 class="title">The fastest way to hire <span class="title-text"> great-fit remote developers</span> for your business</h2>
                 <p class="section1__sub-title">Build your team with handpicked developers from CODEPRIDE, from €31,90 /hour</p>
                 <button class="btn section1__btn">find a developer</button>
                 <div class="section1-container">
@@ -104,7 +104,41 @@
                     </div>
                 </div>
             </section>
-            <section class="section2"></section>
+            <section class="section2">
+                <p class="section2__text">our advantages</p>
+                <h2 class="title section2__title">Why innovative <span class="title-text"> companies prefer</span> CODEPRIDE</h2>
+                <div class="section2-container">
+                    <div class="section2-box">
+                        <h3 class="section2-box__title">Hire in 2 days, not 200</h3>
+                        <p class="section2-box__text">Accelerate your business growth with an average matching time of 2 days.</p>
+                    </div>
+                    <div class="section2-box">
+                        <h3 class="section2-box__title">Handpicked talent</h3>
+                        <p class="section2-box__text">Out team of 25+ matchers are dedicated to personally selecting developers that suit your business requirements.</p>
+                    </div>
+                    <div class="section2-box">
+                        <h3 class="section2-box__title">(Real) value for money</h3>
+                        <p class="section2-box__text">Vetted developers from $31,90 per hour. Not satisfied after a week? No charge.</p>
+                    </div>
+                </div>
+                <div class="section2-container2">
+                    <div class="section2-container2__wrapper">
+                        <div class="section2-container2__textbox">
+                            <p class="section2-container2__textbox-text">Your Perfect Match</p>
+                            <h2 class="title section2-container2__textbox-title">Discover a world of talent with <span class="title-text">your personal matcher</span> </h2>
+                        </div>
+                        <div class="section2-container2__box">
+                            <div class="section2-container2__box-img-content">
+                                <img src="./img/image 7.png" alt="man" class="section2-container2__box-img-content-image">
+                                <img src="./img/image 7 (1).png" alt="man" class="section2-container2__box-img-content-image">
+                                <img src="./img/image 7 (2).png" alt="man" class="section2-container2__box-img-content-image">
+                            </div>
+                            <p class="section2-container2__box-text">Get paired with your own personal matcher from our dedicated team. Why? They listen carefully to you, handpicking developers with perfectly tailored skillsets for your needs.</p>
+                        </div>
+                    </div>
+                    <button class="section2-container2__btn btn">meet my personal matcher</button>
+                </div>
+            </section>
             <section class="section3"></section>
             <section class="section4"></section>
             <section class="section5"></section>
