--- a/index.html
+++ b/index.html
@@ -139,7 +139,41 @@
                     <button class="section2-container2__btn btn">meet my personal matcher</button>
                 </div>
             </section>
-            <section class="section3"></section>
+            <section class="section3">
+                <h2 class="section3__title title">How it works</h2>
+                <div class="section3-wrapper">
+                    <div class="section3-container">
+                        <div class="section3-box">
+                            <h3 class="section3-box__title">Meet your dedicated personal matcher</h3>
+                            <img src="./img/Image (5).png" alt="peaple" class="section3-box__img">
+                        </div>
+                        <div class="section3-box2">
+                            <p class="section3-box2__number">01</p>
+                            <p class="section3-box2__text">Share your specific requirements over a 25-minute call, at your convenience. Have a question? We’re all ears.</p>
+                        </div>
+                    </div>
+                    <div class="section3-container">
+                        <div class="section3-box">
+                            <h3 class="section3-box__title">Get your personally matched developers</h3>
+                            <img src="./img/Image (6).png" alt="peaple" class="section3-box__img">
+                        </div>
+                        <div class="section3-box2">
+                            <p class="section3-box2__number">02</p>
+                            <p class="section3-box2__text">After an average of 2 days, receive a selection of handpicked, ready-to-work developers for your consideration.</p>
+                        </div>
+                    </div>
+                    <div class="section3-container">
+                        <div class="section3-box">
+                            <h3 class="section3-box__title">Achieve excellence</h3>
+                            <img src="./img/Image (7).png" alt="peaple" class="section3-box__img">
+                        </div>
+                        <div class="section3-box2">
+                            <p class="section3-box2__number">03</p>
+                            <p class="section3-box2__text min--width2">Integrate your new developer(s) quickly and easily. Worried about invoicing? We’ll take care of that, so you can focus on delivering results.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="section4"></section>
             <section class="section5"></section>
             <section class="section6"></section>
