--- a/index.html
+++ b/index.html
@@ -174,7 +174,24 @@
                     </div>
                 </div>
             </section>
-            <section class="section4"></section>
+            <section class="section4">
+                <p class="section4__text">Tech Hiring Unleashed: Remote Revolution</p>
+                <h2 class="title">The future of remote tech hiring</h2>
+                <div class="section4-container">
+                    <div class="section4-box">
+                        <p class="section4-box__text">Competencies in our network</p>
+                        <p class="section4-box__text2">500+</p>
+                    </div>
+                    <div class="section4-box">
+                        <p class="section4-box__text">Average matching time</p>
+                        <p class="section4-box__text2">2 days</p>
+                    </div>
+                    <div class="section4-box">
+                        <p class="section4-box__text">Match success rate</p>
+                        <p class="section4-box__text2">94%</p>
+                    </div>
+                </div>
+            </section>
             <section class="section5"></section>
             <section class="section6"></section>
             <section class="section7"></section>
