--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
                     </div>
                 </div>
             </section>
-            <section class="section5"></section>
+            <section class="section5">
+                <h2 class="title section5__title">Discover our <span class="title-text"> trusted tech experts</span></h2>
+            </section>
             <section class="section6"></section>
             <section class="section7"></section>
             <section class="section8"></section>
