--- a/index.html
+++ b/index.html
@@ -194,6 +194,205 @@
             </section>
             <section class="section5">
                 <h2 class="title section5__title">Discover our <span class="title-text"> trusted tech experts</span></h2>
+                <div class="section5-link">
+                    <ul class="link-box">
+                        <li class="link-box__item"><a href="#" class="link-box__link">Software Product Engineering</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link">Data & Artificial Intelligence</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link">Cloud & Infrastructure</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link">Quality Assurance & Design</a></li>
+                    </ul>
+                </div>
+                <div class="section5-container">
+                    <div class="section5-container__wrap">
+                        <div class="section5-container__wrap1">
+                            <img src="./img/forward-item.svg" alt="forward" class="section5-container__svg">
+                            <h3 class="section5-container__title">Data Science & Machine Learning</h3>
+                        </div>
+                        <div class="section5-container__wrap2">
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">Python</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">C++</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">TensorFlow</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">Pandas</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">30+</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="./img/arrow-down.svg" alt="arrow" class="section5-container__arrow">
+                    <img src="./img/arrow-up.svg" alt="arrow" class="section5-container__arrow-up">
+                </div>
+                <div class="section5-container2">
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8.png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Jenny Wilson</h3>
+                            <p class="section5-container2__box-text">fullstack developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Java</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Spring Boot</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8 (1).png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Bessie Cooper</h3>
+                            <p class="section5-container2__box-text">backend developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Java</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Spring</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8 (2).png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Ralph Edwards</h3>
+                            <p class="section5-container2__box-text">backend developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">C#</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Python</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">.NET</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8 (3).png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Devon Lane</h3>
+                            <p class="section5-container2__box-text">backend developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">.NET</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">C#</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">ASP.NET</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section5-container">
+                    <div class="section5-container__wrap">
+                        <div class="section5-container__wrap1">
+                            <img src="./img/routing-2.svg" alt="routing" class="section5-container__svg">
+                            <h3 class="section5-container__title">Data Engineering & BI</h3>
+                        </div>
+                        <div class="section5-container__wrap2">
+                             <div class="section5-container__box">
+                                <p class="section5-container__box-text">Microsoft Power BI</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">Apache Spark</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">Python</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">Databricks</p>
+                            </div>
+                            <div class="section5-container__box">
+                                <p class="section5-container__box-text">25+</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="./img/arrow-down.svg" alt="arrow" class="section5-container__arrow2">
+                    <img src="./img/arrow-up.svg" alt="arrow" class="section5-container__arrow-up2">
+                </div>
+
+                <div class="section5-container2-1">
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8.png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Jenny Wilson</h3>
+                            <p class="section5-container2__box-text">fullstack developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Java</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Spring Boot</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8 (1).png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Bessie Cooper</h3>
+                            <p class="section5-container2__box-text">backend developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Java</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Spring</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8 (2).png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Ralph Edwards</h3>
+                            <p class="section5-container2__box-text">backend developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">C#</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">Python</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">.NET</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section5-container2__box">
+                        <img src="./img/image 8 (3).png" alt="peaple" class="section5-container2__box-img">
+                        <div class="section5-container2__box-container">
+                            <h3 class="section5-container2__box-title">Devon Lane</h3>
+                            <p class="section5-container2__box-text">backend developer</p>
+                            <div class="section5-container2__contant">
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">.NET</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">C#</p>
+                                </div>
+                                <div class="section5-container2__contant-contain">
+                                    <p class="section5-container2__contant-contain-text">ASP.NET</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="section6"></section>
             <section class="section7"></section>
@@ -201,5 +400,6 @@
         </main>
         <footer class="footer"></footer>
      </div>
+     <script src="./main.js"></script>
 </body>
 </html>
