section6-block2-finish

--- a/index.html
+++ b/index.html
@@ -394,7 +394,48 @@
                     </div>
                 </div>
             </section>
-            <section class="section6"></section>
+            <section class="section6">
+                <div class="section6-wrap1">
+                    <div class="section6-textbox">
+                        <h2 class="section6-textbox__title title">The future of  remote tech hiring</h2>
+                        <p class="section6-textbox__text">Because we consistently deliver the world's best developers, fast.</p>
+                    </div>
+                    <div class="section6-box">
+                        <div class="section6-box__block1">
+                            <div class="section6-box__block1-textbox">
+                                <img src="./img/Ellipse 7.svg" alt="Dote" class="section6-box__block1-textbox-img">
+                                <p class="section6-box__block1-textbox-text">Community</p>
+
+                            </div>
+                            <div class="section6-box__block1-textbox">
+                                <p class="section6-box__block1-textbox-text">Jul 22, 2023</p>
+                            </div>
+                        </div>
+                        <div class="section6-box__block2">
+                            <div class="section6-box__block2-textbox">
+                                <p class="section6-box__block2-textbox-text">How Fibbl pushes the limits <br> of AR & eCommerce <br>  with CODEPRIDE developers</p>
+                            </div>
+                            <div class="section6-box__block2-imgbox">
+                                <img src="./img/arrow-left-img.svg" alt="arrow" class="section6-box__block2-imgbox-img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section6-container">
+                    <div class="section6-box1">
+                        <div class="section6-box1__block2-imgbox">
+                            <img src="./img/arrow-left-img.svg" alt="arrow" class="section6-box__block2-imgbox-img">
+                        </div>
+                        <div class="section6-box1__block2-textbox">
+                            <p class="section6-box1__block2-textbox-text">How Fibbl pushes the limits of AR & <br> eCommerce  with CODEPRIDE <br> developers</p>
+                        </div>
+                    </div>
+                    <div class="section6-box2">
+                        <div class="section6-box2__content"></div>
+                        <div class="section6-box2__textbox"></div>
+                    </div>
+                </div>
+            </section>
             <section class="section7"></section>
             <section class="section8"></section>
         </main>
