--- a/index.html
+++ b/index.html
@@ -431,8 +431,18 @@
                         </div>
                     </div>
                     <div class="section6-box2">
-                        <div class="section6-box2__content"></div>
-                        <div class="section6-box2__textbox"></div>
+                        <div class="section6-box2__content">
+                            <div class="section6-box2__content-textbox">
+                                <p class="section6-box2__content-textbox-text">People at CODEPRIDE</p>
+                            </div>
+                            <div class="section6-box2__imgbox">
+                                <img src="./img/arrow-left-dark.svg" alt="arrow" class="section6-box__imgbox-img">
+                            </div>
+                        </div>
+                        <div class="section6-box2__textbox">
+                            <p class="section6-box2__textbox-text1">Launched a complex app</p>
+                            <p class="section6-box2__textbox-text2">How CODEPRIDE built a strong team and <br> launched a complex app in record time</p>
+                        </div>
                     </div>
                 </div>
             </section>
