--- a/index.html
+++ b/index.html
@@ -547,37 +547,37 @@
                     <div class="footer-contentbox">
                         <div class="footer-textbox">
                             <h3 class="footer-textbox__title">Why CODEPRIDE</h3>
-                            <p class="footer-textbox__contain">
-                                <p class="footer-textbox__contain-text">How it works</p>
-                                <p class="footer-textbox__contain-text">Vetting process</p>
-                                <p class="footer-textbox__contain-text">Benefits</p>
-                            </p>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">How it works</a>
+                                <a href="#" class="footer-textbox__contain-text">Vetting process</a>
+                                <a href="#" class="footer-textbox__contain-text">Benefits</a>
+                            </div>
                         </div>
                         <div class="footer-textbox">
                             <h3 class="footer-textbox__title">Pricing</h3>
-                            <p class="footer-textbox__contain">
-                                <p class="footer-textbox__contain-text">Plans</p>
-                                <p class="footer-textbox__contain-text">CODEPRIDE vs alternatives</p>
-                                <p class="footer-textbox__contain-text">FAQs</p>
-                            </p>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">Plans</a>
+                                <a href="#" class="footer-textbox__contain-text">CODEPRIDE vs alternatives</a>
+                                <a href="#" class="footer-textbox__contain-text">FAQs</a>
+                            </div>
                         </div>
                     </div>
                     <div class="footer-contentbox2">
                         <div class="footer-textbox">
                             <h3 class="footer-textbox__title">Company</h3>
-                            <p class="footer-textbox__contain">
-                                <p class="footer-textbox__contain-text">About us</p>
-                                <p class="footer-textbox__contain-text">Our team</p>
-                                <p class="footer-textbox__contain-text">Our values</p>
-                            </p>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">About us</a>
+                                <a href="#" class="footer-textbox__contain-text">Our team</a>
+                                <a href="#" class="footer-textbox__contain-text">Our values</a>
+                            </div>
                         </div>
                         <div class="footer-textbox">
                             <h3 class="footer-textbox__title">Careers</h3>
-                            <p class="footer-textbox__contain">
-                                <p class="footer-textbox__contain-text">Opportunities</p>
-                                <p class="footer-textbox__contain-text">Job openings</p>
-                                <p class="footer-textbox__contain-text">Recruiting team</p>
-                            </p>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">Opportunities</a>
+                                <a href="#" class="footer-textbox__contain-text">Job openings</a>
+                                <a href="#" class="footer-textbox__contain-text">Recruiting team</a>
+                            </div>
                         </div>
                     </div>
                 </div>
