tablet-section4-process

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
                 </ul>
             </nav>
+            <img src="./img/menu.svg" alt="burger-menu" class="burger-menu">
             <button class="btn header__btn">find a developer</button>
         </header>
         <main class="main">
@@ -113,7 +114,7 @@
                         <p class="section2-box__text">Accelerate your business growth with an average matching time of 2 days.</p>
                     </div>
                     <div class="section2-box">
-                        <h3 class="section2-box__title">Handpicked talent</h3>
+                        <h3 class="section2-box__title tablet--margin">Handpicked talent</h3>
                         <p class="section2-box__text">Out team of 25+ matchers are dedicated to personally selecting developers that suit your business requirements.</p>
                     </div>
                     <div class="section2-box">
@@ -176,7 +177,7 @@
             </section>
             <section class="section4">
                 <p class="section4__text">Tech Hiring Unleashed: Remote Revolution</p>
-                <h2 class="title">The future of remote tech hiring</h2>
+                <h2 class="title section4__title">The future of remote tech hiring</h2>
                 <div class="section4-container">
                     <div class="section4-box">
                         <p class="section4-box__text">Competencies in our network</p>
