mobile-section2-finish

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main class="main">
             <section class="section1">
                 <p class="section1__text">CODEPRIDE</p>
-                <h2 class="title">The fastest way to hire <span class="title-text"> great-fit remote developers</span> for your business</h2>
+                <h2 class="title section1__title">The fastest way to hire <span class="title-text"> great-fit remote developers</span> for your business</h2>
                 <p class="section1__sub-title">Build your team with handpicked developers from CODEPRIDE, from €31,90 /hour</p>
                 <button class="btn section1__btn">find a developer</button>
                 <div class="section1-container">
@@ -199,8 +199,8 @@
                     <ul class="link-box">
                         <li class="link-box__item"><a href="#" class="link-box__link">Software Product Engineering</a></li>
                         <li class="link-box__item"><a href="#" class="link-box__link">Data & Artificial Intelligence</a></li>
-                        <li class="link-box__item"><a href="#" class="link-box__link">Cloud & Infrastructure</a></li>
-                        <li class="link-box__item"><a href="#" class="link-box__link">Quality Assurance & Design</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link tablet--margin-right">Cloud & Infrastructure</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link tablet--d-none">Quality Assurance & Design</a></li>
                     </ul>
                 </div>
                 <div class="section5-container">
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section5-container2__box">
+                    <div class="section5-container2__box tablet--margin-right">
                         <img src="./img/image 8 (3).png" alt="peaple" class="section5-container2__box-img">
                         <div class="section5-container2__box-container">
                             <h3 class="section5-container2__box-title">Devon Lane</h3>
@@ -300,7 +300,7 @@
                 </div>
                 <div class="section5-container">
                     <div class="section5-container__wrap">
-                        <div class="section5-container__wrap1">
+                        <div class="section5-container__wrap1 section5--tablet-margin-right">
                             <img src="./img/routing-2.svg" alt="routing" class="section5-container__svg">
                             <h3 class="section5-container__title">Data Engineering & BI</h3>
                         </div>
